syntax = "proto3";

option java_multiple_files = true;

package com.hojongs.grpc;

import "com/hojongs/hello.proto";

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
    rpc InsertItem (Item) returns (Item);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    Hello hello = 1;
}

message Item {
    int32 id = 1;
    string name = 2;
}
